Refactor PDF generation script to update server port and add new route for flyer-v2; update Header component to use logo image and modify localization for pillars section label.

--- a/BIMTLY Promo/src/locales/en.json
+++ b/BIMTLY Promo/src/locales/en.json
@@ -15,7 +15,7 @@
     "subtitle": "Bridge the gap between physical products and their digital information—making products easier to sell, assets easier to manage, and projects easier to document."
   },
   "pillars": {
-    "sectionLabel": "Five Unified Pillars",
+    "sectionLabel": "Four Unified Pillars",
     "items": [
       { "icon": "D", "title": "Drive", "desc": "Cloud file management" },
       { "icon": "DB", "title": "Data Builder", "desc": "Structured collections" },
